# biocheck

./: LICENSE  README.md  pyproject.toml
src/biocheck/: __init__.py  cli.py
src/biocheck.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/biocheck/core/: fasta.py  html_report.py  report.py  structure.py  tabular.py
src/biocheck/gui/: app.py
